@@ -1,2 +1,5 @@
 This software is developed by 
 	Enrico Tassi <gareuselesinge@users.sourceforge.net>
+
+The wm plugin and some work on net* plugins are by
+	Alessando Pira <alex_pira@users.sourceforge.net>
