@@ -1,3 +1,6 @@
+04/12/2004 0.0.4 incomprensible release
+- gtk2 plugin improved
+- wm plugin integrated
 - netin/out plugins for network transparency notification
 04/03/2004 0.0.1 first public release
 - all the bugs are here :)
